--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 a:hover{
-color: cyan
+color: hotpink;
 }
 
 .classrequirement{
-color: purple
-font-family: Helvetica
+color: darkred;
+font-family: Helvetica;
 }
