--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,10 @@ font-family: Helvetica;
 font-family: sans-serif;
 color: #42e3f5
 }
+
+.vibzsunrise{
+    padding: .5rem;
+    margin: 30px;
+    border: 20px ridge blue;
+    background-color: green;
+}
